# noip

./: .gitignore  CMakeLists.txt  fermionic.h  givens_rotation.h  irlm.h  irlm_gs.h  iscboson.h  it_dmrg.h  it_irlm.cpp  it_tdvp.h  readme.md
docs/tdno/: impurity.lyx  rotate_the_H.lyx
example/: boson_imp.cpp  free_fermion.cpp  free_fermion_green.cpp  irlm_2t_nosp.cpp  irlm_gs.cpp  irlm_nat_orb.cpp  irlm_real_space.cpp  irlm_star.cpp  irlm_wilson_chain.cpp  param.json  prepare_input.cpp  quantum_chemistry.cpp
example/old/: irlm_wilson_star.cpp
gs/: CMakeLists.txt  it_irlm.cpp
notebook/: noip_2.ipynb  results_noip.ipynb
notebook/old/: irlm_real_space.ipynb
python/: CMakeLists.txt  bindings.cpp
tdvp/: CMakeLists.txt  fermionic.h  givens_rotation.h  irlm.h  irlm_wilson.h  irlm_wilson_chain.h  it_dmrg.h  it_tdvp.h  it_tdvp_error.h  main.cpp  submit_meso.sh
tdvp/example/: CMakeLists.txt  free_fermion.cpp  irlm_nat_orb.cpp  irlm_orb_rotation.cpp  irlm_real_space.cpp  irlm_star.cpp  irlm_star_ip.cpp  irlm_wilson_chain.cpp  irlm_wilson_star.cpp  param.json  prepare_input.cpp
tdvp/notebook/: irlm_real_space.ipynb  output_star_L100.txt  output_star_L100_eval_t0.txt  output_star_L100_eval_t49.txt  output_star_L100_m.txt  output_star_L100_n0.txt  plot_eval.ipynb  report.ipynb  results_ip.ipynb  star_vs_chain.ipynb
tdvp/notebook/L100/: n0.txt  output.txt
tdvp/notebook/L101/: n0.txt  output.txt
tdvp/notebook/L200/: eval_t40.txt  eval_t70.txt  n0.txt  output.txt
tdvp/notebook/L201/: n0.txt  output.txt
tdvp/notebook/L202/: eval_t98.txt  n0.txt  ni_t98.txt  output.txt
tdvp/notebook/L203/: n0.txt  output.txt
tdvp/notebook/L300/: n0.txt  output.txt
tdvp/notebook/star/L20/: eval_L20_t0.txt  eval_L20_t10.txt  eval_L20_t20.txt  eval_L20_t30.txt  eval_L20_t40.txt  eval_L20_t50.txt  eval_L20_t60.txt  eval_L20_t70.txt  eval_L20_t80.txt  eval_L20_t90.txt
tdvp/notebook/star/L50/: eval_L50_t0.txt  eval_L50_t10.txt  eval_L50_t100.txt  eval_L50_t110.txt  eval_L50_t120.txt  eval_L50_t130.txt  eval_L50_t140.txt  eval_L50_t150.txt  eval_L50_t160.txt  eval_L50_t170.txt  eval_L50_t20.txt  eval_L50_t30.txt  eval_L50_t40.txt  eval_L50_t50.txt  eval_L50_t60.txt  eval_L50_t70.txt  eval_L50_t80.txt  eval_L50_t90.txt
tdvp/notebook/wilson30U0.25/: n0.txt  output.txt
tdvp/notebook/wilson30U0.251/: error.txt  n0.txt  output.txt
tdvp/notebook/wilson30U0.252/: n0.txt  output.txt
tdvp/notebook/wilson30U0.253/: n0.txt  output.txt  readme.txt
tdvp/notebook/wilson30U0.254/: n0.txt  n0c.txt  output.txt
tdvp/notebook/wilson30U0.5/: n0.txt  output.txt
tdvp/notebook/wilson_chain30U0.17t0.5/: n0.txt  n0c.txt  output.txt
tdvp/notebook/wilson_chain30U0.25t0.5/: n0.txt  n0c.txt  output.txt
tdvp/notebook/wilson_chain30U0.25t0.75/: n0.txt  n0c.txt  output.txt
tdvp/notebook/wilson_chain30U0.25t0.75star/: n0.txt  n0c.txt  output.txt
tdvp/notebook/wilson_chain30U0.25t1/: n0.txt  n0c.txt  output.txt
tdvp/python/: CMakeLists.txt  bindings.cpp
tdvp/test/: test_givens.cpp
test/: CMakeLists.txt  test_givens.cpp
